--- a/index.html
+++ b/index.html
@@ -21,18 +21,57 @@
 		#dash3 {
 			background-image: url("dash3.jpg");
 		}
+		.mdc-menu{
+			position: absolute;
+			top: 60px!important;
+		}
+		.mdc-card__media-content{
+			font-family: var(--mdc-typography-headline6-font-family, var(--mdc-typography-font-family, Roboto, sans-serif))
+		}
 	</style>
 
 	<script src="jq/jquery-3.5.1.min.js"></script>
 	<script type="text/babel">
+		function openMenu(){
+			menu.open = true;
+		}
 		class Button extends React.Component{
 			render(){
 				return (
-					<button className="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" aria-label="Open navigation menu">
+					<button className="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" title={this.props.title}>
 						<span className="material-icons">
 							{this.props.name}
 						</span>
 					</button>
+				)
+			}
+		}
+		class MenuItem extends React.Component{
+			render(){
+				return (
+					<li className="mdc-list-item" role="menuitem">
+						<span className="mdc-list-item__ripple"></span>
+						<span className="mdc-list-item__text">{this.props.name}</span>
+					</li>
+				)
+			}
+		}
+		class ButtonMenu extends React.Component{
+			render(){
+				return (
+					<div className="mdc-menu-surface--anchor">
+						<button className="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" title={this.props.title} onClick={openMenu}>
+							<span className="material-icons">
+								{this.props.name}
+							</span>
+						</button>
+						<div className="mdc-menu mdc-menu-surface ">
+							<ul className="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical" tabIndex="-1">
+								<MenuItem name="Profile" />
+								<MenuItem name="Logout" />
+							</ul>
+						</div>
+					</div>
 				)
 			}
 		}
@@ -42,13 +81,13 @@
 					<header className="mdc-top-app-bar mdc-top-app-bar--fixed ">
 						<div className="mdc-top-app-bar__row">
 							<section className="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-								<Button name="menu"/>
+								<Button name="menu" title="Widgets"/>
 								<span className="mdc-top-app-bar__title">{this.props.appname}</span>
 							</section>
 							<section className="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-								<Button name="settings"/>
-								<Button name="notification_important"/>
-								<Button name="person"/>
+								<Button name="settings" title="Settings"/>
+								<Button name="notification_important" title="Notifications"/>
+								<ButtonMenu name="person" title="User"/>
 							</section>
 						</div>
 					</header>
@@ -98,6 +137,11 @@
 		</div>
 	</main>
 	<script>
+		var menu;
+		$(document).ready(function() {
+			menu = new mdc.menu.MDCMenu(document.querySelector('.mdc-menu'));
+		});
+		
 		//const MDCTopAppBar = mdc.topAppBar.MDCTopAppBar;
 		//const topAppBarElement = document.querySelector('.mdc-top-app-bar');
 		//const topAppBar = new MDCTopAppBar(topAppBarElement);
